# CodeCrew

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  mkdocs-pdf.yml  mkdocs.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
bitnet/: README.md  setup_bitnet.ps1  start_bitnet.ps1
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  index.md  installation.md  project-overview.md  troubleshooting.md  versioning.md
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/register/: route.ts
frontend/app/api/generate/: route.ts
frontend/app/api/jobs/[job_id]/: route.ts
frontend/app/api/jobs/[job_id]/delete/: route.ts
frontend/app/api/jobs/[job_id]/download/: route.ts
frontend/app/api/jobs/[job_id]/files/: route.ts
frontend/app/api/jobs/[job_id]/files/[...filepath]/: route.ts
frontend/app/api/jobs/[job_id]/stream/: route.ts
frontend/app/api/me/: route.ts
frontend/app/api/me/jobs/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/jobs/[job_id]/: page.tsx
frontend/app/jobs/[job_id]/files/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/lib/: job-store.ts
scripts/: generate_spuu_internship_report.py
site/: 404.html  index.html  sitemap.xml
site/api-reference/: index.html
site/architecture/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/installation/: index.html
site/javascripts/: mermaid-init.js
site/project-overview/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/versioning/: index.html
src/codecrew/: __init__.py  agents.py  crew.py  database.py  main.py  model_configs.py  models.py  pipeline.py  queue_cli.py  server.py
src/codecrew/config/: agents.yaml  tasks.yaml
src/codecrew/providers/: __init__.py  llm_provider.py  quality_telemetry.py  search_provider.py
src/codecrew/queue/: celery_app.py  tasks.py
src/codecrew/rag/: __init__.py  store.py
src/codecrew/tools/: __init__.py  code_executor.py  execution_loop.py  file_writer.py  readers.py  think.py  turboquant.py
tests/: test_crew.py  test_pipeline.py  test_tools.py  test_turboquant.py
