[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecrew"
version = "0.1.0"
description = "Multi-agent CrewAI system: Researcher, Coder, and Reviewer collaborate to build complete projects from natural language task descriptions."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "CodeCrew Team"}
]

dependencies = [
    "agentscope>=0.1.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
all = [
    "codecrew[dev]",
]

[project.scripts]
codecrew = "codecrew.main:run"
codecrew-server = "codecrew.server:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
