[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecrew"
version = "0.1.0"
description = "Multi-agent AgentScope system that turns natural language task descriptions into complete project codebases."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "CodeCrew Team"}
]

dependencies = [
    "agentscope>=1.0.18,<2.0.0",
    "ollama>=0.1.7",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.12.5,<2.13.0",
    "PyYAML>=6.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
rag = [
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.0.0",
    "flashrank>=0.2.8",
    "lancedb>=0.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "unstructured>=0.18.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.30",
    "mkdocs-with-pdf>=0.9.3",
    "pymdown-extensions>=10.9",
]
all = [
    "codecrew[dev]",
    "codecrew[rag]",
    "codecrew[docs]",
]

[project.scripts]
codecrew = "codecrew.main:run"
codecrew-server = "codecrew.server:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
